# pico

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Makefile  PICO_JAGGED_INTEGRATION_SUMMARY.md  README.md  builder.rs  coord.sh  pico-gpu.lic  single_node.sh  single_node_test.sh  test_byte_trace.sh  vmworker.sh
aot-codegen/: Cargo.toml
aot-codegen/src/: block_analysis.rs  cfg_analysis.rs  compiler.rs  config.rs  constants.rs  elf_parser.rs  instruction_translator.rs  lib.rs  metrics.rs  post_processor.rs  types.rs
aot-runtime/: Cargo.toml
aot-runtime/src/: dispatch.rs  hook.rs  interpreter.rs  lib.rs  syscall.rs  types.rs
aot-runtime/src/emulator/: chunk.rs  clock.rs  constants.rs  instructions_base.rs  instructions_no_count.rs  instructions_tracked.rs  memory.rs  mod.rs  registers.rs  snapshot.rs  state.rs  types.rs  unconstrained.rs
aot-runtime/src/precompiles/: ec.rs  fptower.rs  keccak256.rs  limb_math.rs  mod.rs  poseidon2.rs  sha256.rs  uint256.rs
babybear-ffi/: Cargo.toml  build.rs
babybear-ffi/src/: lib.rs
chips/: Cargo.toml
chips/src/: consts.rs  lib.rs  lookup_toy.rs  toy.rs
chips/src/chips/: mod.rs  toy.rs
chips/src/chips/alu/: mod.rs
chips/src/chips/byte/: columns.rs  constraints.rs  mod.rs  traces.rs
chips/src/chips/cpu/: columns.rs  constraints.rs  mod.rs  traces.rs  utils.rs
chips/src/chips/examples/: lookup_toy.rs  mod.rs  toy.rs
chips/src/chips/lt/: columns.rs  constraints.rs  mod.rs  traces.rs
chips/src/chips/memory/: columns.rs  mod.rs  trace.rs
chips/src/chips/memory_program/: columns.rs  constraints.rs  mod.rs  traces.rs
chips/src/chips/program/: columns.rs  constraints.rs  traces.rs
chips/src/chips/sll/: columns.rs  constraints.rs  traces.rs
chips/src/chips/sr/: columns.rs  constraints.rs  mod.rs  trace.rs
chips/src/gadgets/: add.rs  baby_bear_word.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs  lt.rs  mod.rs
chips/src/gadgets/baby_bear/: bit_decomposition.rs
chips/src/utils/: memory.rs  mod.rs  word.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  context.rs  executor.rs  instruction.rs  lib.rs  opcode.rs  program.rs  programs.rs  public_values.rs  record.rs  state.rs
compiler/src/events/: alu.rs  byte.rs  mod.rs
compiler/src/riscv/disassembler/: elf.rs  rrs.rs
compiler/src/syscalls/: code.rs  context.rs  deferred.rs  mod.rs  write.rs
compiler/test_data/: riscv32im-succinct-zkvm-elf
distributed-vm/: Cargo.toml  README.md  build.rs
distributed-vm/proto/: coordinator.proto
distributed-vm/src/: lib.rs
distributed-vm/src/common/: auth.rs  mod.rs  parse.rs
distributed-vm/src/coordinator/: config.rs  emulator.rs  grpc.rs  mod.rs
distributed-vm/src/gateway/: message.rs  mod.rs
distributed-vm/src/gateway/handler/: mod.rs  proof_tree.rs
distributed-vm/src/messages/: combine.rs  emulator.rs  gateway.rs  mod.rs  riscv.rs
distributed-vm/src/single_node/: config.rs
distributed-vm/src/timeline/: mod.rs  storage.rs  types.rs
distributed-vm/src/worker/: combine.rs  config.rs  grpc.rs  message.rs  mod.rs  riscv.rs
distributed-vm/src/worker/prover/: combine.rs  (+2 more)
examples/: Cargo.toml
examples/aggregator/app/: Cargo.toml
examples/aot_common/: Cargo.toml
examples/aot_common/src/: lib.rs
examples/elf/: riscv32im-pico-zkvm-elf
examples/fibonacci/aot/: Cargo.toml
examples/fibonacci/app/: Cargo.toml
examples/fibonacci/lib/: Cargo.toml
examples/fibonacci/prover/: Cargo.toml
examples/reth/aot/: Cargo.toml
examples/reth/lib/: Cargo.toml
examples/tendermint/app/: Cargo.toml
examples/tendermint/prover/: Cargo.toml
machine/: Cargo.toml
machine/examples/: fib_machine.rs  toy_base_machine.rs  toy_lookup_machine.rs  toy_machine.rs  toy_prover.rs  toymachine.rs
machine/src/: builder.rs  chip.rs  config.rs  extension.rs  folder.rs  keys.rs  lib.rs  lookup.rs  machine.rs  permutation.rs  program.rs  proof.rs  prover.rs  utils.rs  verifier.rs  word.rs
perf/bench_apps/reth-pico/: Cargo.toml
perf/bench_apps/tendermint-pico/: Cargo.toml
sdk/: Cargo.toml
sdk/cli/: Cargo.toml
sdk/cli/src/: lib.rs
sdk/examples/: sdk_examples.rs
sdk/patch-libs/src/: lib.rs  secp256r1.rs
sdk/sdk/: Cargo.toml
sdk/sdk/src/: client.rs  lib.rs  m31_client.rs  memcpy.s  memset.s  poseidon2_hash.rs  vk_client.rs
sdk/src/: lib.rs  sdk.rs
vm/: Cargo.toml  build.rs
vm/examples/: bench.rs  build_vk_map.rs  parse_elf.rs  test_e2e.rs  test_e2e_chain.rs  test_e2e_no_recursion.rs  test_e2e_vk.rs  test_e2e_vk_kb.rs  test_proverchain.rs  test_riscv.rs  test_riscv_combine.rs  test_riscv_compress.rs  test_riscv_emulator.rs  test_riscv_machine.rs  test_riscv_recursion.rs  test_simple_machine.rs  test_simple_recursion.rs  toy_base_machine.rs  toy_lookup_machine.rs  toy_simple_machine.rs
vm/examples/common/: parse_args.rs
vm/examples/patch-testing/: Cargo.toml
vm/src/: lib.rs
vm/src/chips/: mod.rs  poseidon2.rs  utils.rs
vm/src/compiler/: compiler.rs  instruction.rs  mod.rs  opcode.rs  program.rs  word.rs
vm/src/configs/: bb_poseidon2.rs  config.rs  mod.rs
vm/src/cuda_adaptor/: chips_analyzer.rs  commit_main_gm.rs  fri_commit.rs  fri_open.rs  mod.rs  permutation_cuda.rs  poseidon_constant.rs  quotient.rs  quotient_2.rs  setup_keys_gm.rs
vm/src/emulator/: context.rs  emulator.rs  emulator_v2.rs  mod.rs  opts.rs  record.rs  stdin.rs
vm/src/instances/: mod.rs  riscv_machine.rs  simple_machine.rs
vm/src/machine/: builder.rs  builder_orig.rs  chip.rs  estimator.rs  extension.rs  field.rs  folder.rs  generic_folder.rs  jagged_test.rs  jagged_trace.rs  keys.rs  logger.rs  lookup.rs  machine.rs  mod.rs  perf.rs  permutation.rs  proof.rs  prover.rs  report.rs  utils.rs  verifier.rs  witness.rs
vm/src/macros/: mod.rs
vm/src/messages/: combine.rs  gateway.rs  mod.rs  riscv.rs
vm/src/primitives/: consts.rs  consts_v2.rs  mod.rs  types.rs
vm/src/proverchain/: combine.rs  combine_vk.rs  compress.rs  compress_vk.rs  convert.rs  deferred.rs  embed.rs  embed_vk.rs  mod.rs  riscv.rs
vm/src/recursion/: mod.rs
vm/src/recursion_v2/: mod.rs  types.rs
vm/src/thread/: channel.rs
(+963 files in other folders)
