[workspace]
members = ["chips", "derive", "examples", "machine", "compiler", "configs"]
resolver = "2"

[workspace.package]
name = "brevis-vm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["zkvm", "plonky3", "stark", "FRI"]
categories = ["cryptography"]


[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]
# pico
pico-configs = { path = "configs" }
pico-machine = { path = "machine" }
pico-chips = { path = "chips" }
pico-compiler = { path = "compiler" }
pico-derive = { path = "derive" }

# p3
p3-air = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-field = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-commit = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-matrix = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-baby-bear = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-util = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-challenger = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-dft = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-fri = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-goldilocks = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-keccak = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-keccak-air = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-blake3 = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-mds = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-merkle-tree = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-poseidon2 = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-symmetric = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-uni-stark = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-maybe-rayon = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }
p3-bn254-fr = { git = "ssh://git@github.com/brevis-network/p3-for-vm.git", branch = "main" }

# misc
anyhow = { version = "1.0.40", default-features = false }
arrayref = "0.3"
env_logger = "0.11"
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
hex = "0.4.3"
itertools = "0.13"
log = "0.4.21"
num_cpus = "1.16"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10"
serde = "1.0"
static_assertions = "1.1"
syn = { version = "1.0", features = ["full"] }
tracing = "0.1"
