[workspace]
members = ["chips", "derive", "examples", "machine", "compiler", "configs", "emulator", "instances"]
resolver = "2"

[workspace.package]
name = "brevis-vm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["zkvm", "plonky3", "stark", "FRI"]
categories = ["cryptography"]


[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]
# pico
pico-configs = { path = "configs" }
pico-machine = { path = "machine" }
pico-chips = { path = "chips" }
pico-compiler = { path = "compiler" }
pico-derive = { path = "derive" }
pico-emulator =  { path = "emulator" }
pico-instances = { path = "instances" }

# p3

p3-air = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3.git" , rev = "cf5f624" }

# misc
anyhow = { version = "1.0.40", default-features = false }
arrayref = "0.3"
env_logger = "0.11"
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
hex = "0.4.3"
itertools = "0.13"
rayon-scan = "0.1.1"
log = "0.4.21"
num_cpus = "1.16"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10"
serde = "1.0"
static_assertions = "1.1"
syn = { version = "1.0", features = ["full"] }
tracing = "0.1"
