[workspace]
members = [
    "derive",
    "examples",
    "vm",
]
resolver = "2"

[workspace.package]
name = "brevis-vm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["zkvm", "plonky3", "stark", "FRI"]
categories = ["cryptography"]
repository = "https://github.com/brevis-network/brevis-vm"


[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]
# pico
pico-derive = { path = "derive" }
pico-vm = { path = "vm" }

# p3

# NOTE: Pin to known a "good" commit without recent API changes
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
    "nightly-features",
], rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3.git", rev = "42d52e8608c1d12d337cfc8bfd692777ef13532f" }

# For local debugging
# p3-air = { path = "../Plonky3/air" }
# p3-field = { path = "../Plonky3/field" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-baby-bear = { path = "../Plonky3/baby-bear", features = [
#     "nightly-features",
# ] }
# p3-util = { path = "../Plonky3/util" }
# p3-challenger = { path = "../Plonky3/challenger" }
# p3-dft = { path = "../Plonky3/dft" }
# p3-fri = { path = "../Plonky3/fri" }
# p3-goldilocks = { path = "../Plonky3/goldilocks" }
# p3-keccak = { path = "../Plonky3/keccak" }
# p3-keccak-air = { path = "../Plonky3/keccak-air" }
# p3-blake3 = { path = "../Plonky3/blake3" }
# p3-mds = { path = "../Plonky3/mds" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
# p3-uni-stark = { path = "../Plonky3/uni-stark" }
# p3-maybe-rayon = { path = "../Plonky3/maybe-rayon" }
# p3-bn254-fr = { path = "../Plonky3/bn254-fr" }

# misc
anyhow = { version = "1.0.40", default-features = false }
arrayref = "0.3.8"
backtrace = "0.3.71"
bincode = "1.3.3"
bytemuck = "1.16.3"
elf = "0.7.4"
env_logger = "0.11"
eyre = "0.6.12"
ff = { version = "0.13", features = ["derive", "derive_bits"] }
generic-array = { version = "1.1.0", features = ["alloc", "serde"] }
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
hex = "0.4.3"
itertools = "0.13"
lazy_static = "1.5.0"
log = "0.4.21"
nohash-hasher = "0.2.0"
num = { version = "0.4.3" }
num_cpus = "1.16"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10"
rayon-scan = "0.1.1"
rrs_lib = { package = "rrs-succinct", version = "0.1.0" }
serde = { version = "1.0.205", features = ["derive", "rc"] }
serde_with = "3.9.0"
stacker = "0.1"
static_assertions = "1.1"
strum = "0.26.3"
strum_macros = "0.26.4"
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0.63"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tracing = "0.1.40"
typenum = "1.17.0"
vec_map = "0.8.2"
zkhash = "0.2.0"
