[package]
name = "pico-aot-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
quote = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elf.workspace = true
