[package]
name = "pico-aot-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pico-vm.workspace = true
hashbrown = { workspace = true }
p3-koala-bear = { workspace = true }
log = { workspace = true }
tiny-keccak.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
p3-field.workspace = true
p3-symmetric.workspace = true
typenum.workspace = true
hybrid-array.workspace = true
num.workspace = true
k256.workspace = true
p256.workspace = true
once_cell.workspace = true
halo2curves.workspace = true
bls12_381.workspace = true
curve25519-dalek.workspace = true
# AOT precompile backends.
ark-ff = "0.5"
ark-secp256k1 = "0.5"
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"


[features]
bigint-rug = ["pico-vm/bigint-rug"]
