[package]
name = "distributed-vm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coordinator"
path = "bin/coordinator.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
crossbeam.workspace = true
derive_more.workspace = true
log.workspace = true
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-koala-bear.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
pico-perf.workspace = true
pico-sdk.workspace = true
pico-vm = { workspace = true, features = ["distributed"] }
prost-types.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
strum.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true
