[package]
name = "pico-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
# pico
pico-chips = { workspace = true }
pico-configs = { workspace = true }

# p3
p3-air = { workspace = true}
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-matrix = { workspace = true }
p3-baby-bear = { workspace = true }
p3-util = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-blake3 = { workspace = true }
p3-mds = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-bn254-fr = { workspace = true }

# misc
serde = { version = "1.0.207", features = ["derive"] }
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }