[package]
name = "pico-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
# pico
pico-configs = { workspace = true }

# p3
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-matrix = { workspace = true }
p3-baby-bear = { workspace = true }
p3-util = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-blake3 = { workspace = true }
p3-mds = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-bn254-fr = { workspace = true }

# misc
anyhow.workspace = true

hashbrown.workspace = true
itertools.workspace = true
log.workspace = true
rayon-scan = {workspace = true}
pico-compiler.workspace = true
serde.workspace = true

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
# We only used the specific chips in the examples (and tests).
# It could not be added to the dependencies, since the specific chips need to implement
# the traits (as `ChipBehavior`), otherwise it causes the cyclic dependency.
pico-chips.workspace = true
