[package]
name = "pico-sdk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bincode.workspace = true
serde.workspace = true
clap.workspace = true
pico-vm.workspace = true
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-field.workspace = true

[features]
default = []
verify = []
