[package]
name = "reth-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-sdk.workspace = true
bincode = "1.3.3"
rsp-client-executor = { git = "https://github.com/brevis-network/rsp.git", rev="676c482e21e5394e655f682973b195b8678212ec" }