[package]
version = "0.1.0"
name = "tendermint-pico"
edition = "2021"

[dependencies]
pico-sdk.workspace = true
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tendermint = { version = "=0.40.1", default-features = false }
tendermint-light-client-verifier = { version = "=0.40.1", default-features = false, features = [
    "rust-crypto",
] }
